# advent_of_code_2022

./: .gitignore  README.md  benchmark.py  docker-compose.yaml  docker_compose.yaml  init.py  misc.py  pyproject.toml
day_01/: main.py  main.sql
day_02/: main.py  main.sql
day_03/: main.py  main.sql
day_04/: main.py  main.sql
day_05/: main.py  main.sql
day_06/: main.py  main.sql
day_07/: main.py  main.sql
day_08/: main.py  main.sql
day_09/: main.py  main.sql
day_10/: main.py  main.sql
day_11/: main.py  main.sql
day_12/: main.py  main.sql
day_13/: main.py  main.sql
day_14/: main.py  main.sql
day_15/: main.py  main.sql
day_16/: main.py  main.sql
day_17/: main.py  main.sql
day_18/: main.py  main.sql
day_19/: main.py  main.sql
day_20/: main.py  main.sql
day_21/: main.py  main.sql
day_22/: main.py  main.sql
day_23/: main.py  main.sql
day_24/: main.py  main.sql
day_25/: main.py  main.sql
days/: __init__.py
days/day_01/: main.py  part1.sql  part2.sql
days/day_02/: main.py  part1.sql  part2.sql
days/day_03/: main.py  part1.sql  part2.sql
days/day_04/: main.py  part1.sql  part2.sql
days/day_05/: main.py  part2.sql
days/day_06/: main.py  part1.sql  part2.sql
days/day_07/: main.py  part1.sql  part2.sql
days/day_08/: main.py  part2.sql
days/day_09/: main.py  part1.sql  part2.sql
days/day_10/: main.py  part1.sql  part2.sql
days/day_11/: main.py  part1.sql  part2.sql
days/day_12/: main.py  part1.sql  part2.sql
days/day_13/: main.py  part1.sql  part2.sql
days/day_14/: compiled.py  main.py  part1.sql  part2.sql
(+43 files in other folders)
